--- a/鸽子喂料机/Project.uvprojx
+++ b/鸽子喂料机/Project.uvprojx
@@ -820,6 +820,16 @@
               <FileType>5</FileType>
               <FilePath>.\User\main.h</FilePath>
             </File>
+            <File>
+              <FileName>State3.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\State3.c</FilePath>
+            </File>
+            <File>
+              <FileName>State3.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\User\State3.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
